--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -19,16 +19,16 @@ jobs:
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
         run: |
           if [ -z "$var" ]; then
-            echo 'VAR=cert_tool' >> $GITHUB_ENV
+            echo 'VAR=\"cert_tool\"' >> $GITHUB_ENV
           fi
       - name: set password
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
         run: |
-          echo 'VAR=${{ env.VAR }},passwords_tool' >> $GITHUB_ENV
+          echo 'VAR=${{ env.VAR }},\"passwords_tool\"' >> $GITHUB_ENV
       - name: Build Matrix
         id: set-matrix
         run: |
-          echo "::set-output name=tools_matrix::[cert_tool,passwords_tool]"
+          echo "::set-output name=tools_matrix::\[${{ env.VAR }}\]"
       - name: cat json
         run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
       - name: echo json
