--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -18,21 +18,35 @@ jobs:
       - name: set cert
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
         run: |
-          if [ -z "$var" ]; then
+          if [ -z "${{ env.VAR }}" ]; then
             echo 'VAR=\"cert_tool\"' >> $GITHUB_ENV
+          else
+            echo 'VAR=${{ env.VAR }},\"cert_tool\"' >> $GITHUB_ENV
           fi
       - name: set password
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
         run: |
-          echo 'VAR=${{ env.VAR }},\"passwords_tool\"' >> $GITHUB_ENV
+          if [ -z "${{ env.VAR }}" ]; then
+            echo 'VAR=\"passwords_tool\"' >> $GITHUB_ENV
+          else
+            echo 'VAR=${{ env.VAR }},\"passwords_tool\"' >> $GITHUB_ENV
+          fi
+      - name: set all
+        if: contains(steps.changed_files.outputs.all, 'common_functions')
+        run: |
+          echo 'VAR=\"cert_tool\",\"passwords_tool\",\"installer\"' >> $GITHUB_ENV
+      - name: set builder
+        if: contains(steps.changed_files.outputs.all, 'builder.sh')
+        run: |
+          if [ -z "${{ env.VAR }}" ]; then
+            echo 'VAR=\"builder.sh\"' >> $GITHUB_ENV
+          else
+            echo 'VAR=${{ env.VAR }},\"builder.sh\"' >> $GITHUB_ENV
+          fi
       - name: Build Matrix
         id: set-matrix
         run: |
           echo "::set-output name=tools_matrix::[${{ env.VAR }}]"
-      - name: cat json
-        run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
-      - name: echo json
-        run: echo "${{ env.VAR }}"
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
   
@@ -44,4 +58,6 @@ jobs:
         tool: ${{ fromJson(needs.get-files.outputs.tools_matrix) }}
     steps:
       - name: builder-sh
-        run: echo ${{ matrix }}
+        run: |
+          echo ${{ matrix.tool }}
+          bash ./unattended_installer/builder.sh --${{ matrix.tool }}
