--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -34,7 +34,7 @@ jobs:
       - name: set all
         if: contains(steps.changed_files.outputs.all, 'common_functions')
         run: |
-          echo 'VAR=\"cert_tool\",\"passwords_tool\",\"installer\"' >> $GITHUB_ENV
+          echo 'VAR=\"cert-tool\",\"passwords_tool\",\"installer\"' >> $GITHUB_ENV
       - name: set builder
         if: contains(steps.changed_files.outputs.all, 'builder.sh')
         run: |
@@ -60,4 +60,5 @@ jobs:
       - name: builder-sh
         run: |
           echo ${{ matrix.tool }}
+          pwd
           bash unattended_installer/builder.sh -${{ matrix.tool }}
