--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -27,14 +27,14 @@ jobs:
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
         run: |
           if [ -z "${{ env.VAR }}" ]; then
-            echo 'VAR=\"passwords-tool\"' >> $GITHUB_ENV
+            echo 'VAR=\"password-tool\"' >> $GITHUB_ENV
           else
-            echo 'VAR=${{ env.VAR }},\"passwords-tool\"' >> $GITHUB_ENV
+            echo 'VAR=${{ env.VAR }},\"password-tool\"' >> $GITHUB_ENV
           fi
       - name: set all
         if: contains(steps.changed_files.outputs.all, 'common_functions')
         run: |
-          echo 'VAR=\"cert-tool\",\"passwords-tool\",\"installer\"' >> $GITHUB_ENV
+          bash .github/workflows/set-tools.sh common_functions
       - name: set builder
         if: contains(steps.changed_files.outputs.all, 'builder.sh')
         run: |
@@ -62,6 +62,5 @@ jobs:
       - name: builder-sh
         run: |
           echo ${{ matrix.tool }}
-          pwd
-          ls -la
           bash unattended_installer/builder.sh --${{ matrix.tool }}
+          ls -la
