--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -31,10 +31,18 @@ jobs:
           else
             echo 'VAR=${{ env.VAR }},\"password-tool\"' >> $GITHUB_ENV
           fi
+      - name: set install
+        if: contains(steps.changed_files.outputs.all, 'downloader') || contains(steps.changed_files.outputs.all, 'install_functions')
+        run: |
+          if [ -z "${{ env.VAR }}" ]; then
+            echo 'VAR=\"installer\"' >> $GITHUB_ENV
+          else
+            echo 'VAR=${{ env.VAR }},\"installer\"' >> $GITHUB_ENV
+          fi
       - name: set all
         if: contains(steps.changed_files.outputs.all, 'common_functions')
         run: |
-          bash .github/workflows/set-tools.sh common_functions -xe
+          echo 'VAR=\"cert-tool\",\"password-tool\",\"installer\"' >> $GITHUB_ENV
       - name: set builder
         if: contains(steps.changed_files.outputs.all, 'builder.sh')
         run: |
