--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -4,12 +4,12 @@ on:
     branches: [ 'poc-shellcheck-to4.3', 'master' ]
 
 jobs:
-  get-files:
+  get-artifacts:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2.1.0
-      - name: Get Files
+      - name: Set Artifacts
         uses: jitterbit/get-changed-files@v1
         id: changed_files
         with:
@@ -60,15 +60,34 @@ jobs:
   
   Builder-Scripts:
     runs-on: ubuntu-latest
-    needs: get-files
+    needs: get-artifacts
     strategy:
       matrix: 
-        tool: ${{ fromJson(needs.get-files.outputs.tools_matrix) }}
+        tool: ${{ fromJson(needs.get-artifacts.outputs.tools_matrix) }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2.1.0
-      - name: builder-sh
+      - name: Generate artifacts
+        if: "!contains(matrix.tool, 'builder.sh')"
         run: |
           echo ${{ matrix.tool }}
           bash unattended_installer/builder.sh --${{ matrix.tool }}
           ls -la unattended_installer
+          
+  shellcheck:
+    name: runner / shellcheck
+    runs-on: ubuntu-latest
+    needs: Builder-Scripts
+    steps:
+      - name: Check out repository code
+        run: |
+          ls -la
+      - name: shellcheck-github-pr-review
+        uses: reviewdog/action-shellcheck@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
+          pattern: '*.sh'
+          path: 'unattended_installer'
+          exclude: 'unattended_installer/Development-guide.md'
+          
