--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -77,16 +77,20 @@ jobs:
             ls -la
           fi
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
-          name: "${{ matrix.tool }}"
-          path: "unattended_installer/*${{ matrix.tool }}.sh"
+          name: dist-without-markdown
+          path: |
+            unattended_installer/*${{ matrix.tool }}.sh
+            !unattended_installer/**/*.md
           
   shellcheck:
     name: runner / shellcheck
     runs-on: ubuntu-latest
     needs: Builder-Scripts
     steps:
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
       - name: Check out repository code
         run: |
           ls -la
