--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -87,19 +87,14 @@ jobs:
   shellcheck:
     name: runner / shellcheck
     runs-on: ubuntu-latest
-    needs: Builder-Scripts
     steps:
-      - name: Download all artifacts
-        uses: actions/download-artifact@v3
-      - name: Check out repository code
-        run: |
-          ls -la
-      - name: shellcheck-github-pr-review
+      - uses: actions/checkout@v1
+      - name: shellcheck
         uses: reviewdog/action-shellcheck@v1
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
           pattern: '*.sh'
-          path: '.'
-          exclude: 'unattended_installer/Development-guide.md'
+          path: './unattended_installer'
+          exclude: './unattended_installer/Development-guide.md'
           
