--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -87,6 +87,7 @@ jobs:
   shellcheck:
     name: runner / shellcheck
     runs-on: ubuntu-latest
+    needs: Builder-Scripts
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v3
