--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -100,7 +100,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          pattern: '*.sh'
-          path: 'artifacts-generated'
+          pattern: 'wazuh-certs-tool.sh'
+          path: 'artifacts-generated/wazuh-certs-tool.sh'
           exclude: 'artifacts-generated/Development-guide.md'
           
