--- a/.github/ workflows/shellcheck.yml
+++ b/.github/ workflows/shellcheck.yml
@@ -1,53 +1,81 @@
-name: Wazuh Packages tools shellcheck
-
-on:
-  pull_request:
-    branches:
-      - 'shellcheck-github-actions-workflow'
-    paths:
-      - 'unattended_installer/**'
-  
+name: pr-review
+on: [pull_request]
 
 jobs:
-  build-artifacts:
+  get-artifacts:
     runs-on: ubuntu-latest
-    name: Building artifacts
     steps:
-    - name: Verify file changes
-      uses: tj-actions/verify-changed-files@v5.5
-      id: changed_files
-      with:
-        path: 'unattended_installer/**'
-    - name: Display changed files cert_tool
-      id: modified_files_list
-      if: contains(steps.changed_files.outputs.files_changed, 'cert_tool')
-      with:
-        stringArray: 'cert-tool'
-    - name: Display changed files install_functions
-      if: contains(steps.changed_files.outputs.files_changed, 'install_functions')
-      with:
-        stringArray: 'installer'
-    - name: Display changed files common_functions
-      if: contains(steps.changed_files.outputs.files_changed, 'common_functions')
-      with:
-        stringArray: '["installer","password-tool","cert-tool"]'
-    - name: Display changed files password-tool
-      if: contains(steps.changed_files.outputs.files_changed, 'password_tool')
-      with:
-        stringArray: 'password-tool'
-    - name: Display changed files install_functions
-      if: contains(steps.changed_files.outputs.files_changed, 'downloader')
-      with:
-        stringArray: 'installer'
-    - name: Display changed files install_functions
-      if: contains(steps.changed_files.outputs.files_changed, 'builder.sh')
-      with:
-        stringArray: 'builder.sh'
-
-    - name: run builder.sh
-      run: |
-        if [ $i != "builder.sh" ];then
-          for i in ${{ steps.modified_files_list.outputs.stringList }}; do
-            ./unattended_installer/builder.sh --$i
-          done
-        fi
+      - name: Checkout
+        uses: actions/checkout@v2.1.0
+      - name: Set Artifacts
+        uses: jitterbit/get-changed-files@v1
+        id: changed_files
+        with:
+          format: 'csv'
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: set cert
+        if: contains(steps.changed_files.outputs.all, 'cert_tool')
+        run: |
+          if [ -z "${{ env.VAR }}" ]; then
+            echo 'VAR=\"cert-tool\"' >> $GITHUB_ENV
+          else
+            echo 'VAR=${{ env.VAR }},\"cert-tool\"' >> $GITHUB_ENV
+          fi
+      - name: set password
+        if: contains(steps.changed_files.outputs.all, 'passwords_tool')
+        run: |
+          if [ -z "${{ env.VAR }}" ]; then
+            echo 'VAR=\"password-tool\"' >> $GITHUB_ENV
+          else
+            echo 'VAR=${{ env.VAR }},\"password-tool\"' >> $GITHUB_ENV
+          fi
+      - name: set install
+        if: |
+          contains(steps.changed_files.outputs.all, 'downloader') || 
+          contains(steps.changed_files.outputs.all, 'install_functions')
+        run: |
+          if [ -z "${{ env.VAR }}" ]; then
+            echo 'VAR=\"installer\"' >> $GITHUB_ENV
+          else
+            echo 'VAR=${{ env.VAR }},\"installer\"' >> $GITHUB_ENV
+          fi
+      - name: set all
+        if: contains(steps.changed_files.outputs.all, 'common_functions')
+        run: |
+          echo 'VAR=\"cert-tool\",\"password-tool\",\"installer\"' >> $GITHUB_ENV
+      - name: set builder
+        if: contains(steps.changed_files.outputs.all, 'builder.sh')
+        run: |
+          if [ -z "${{ env.VAR }}" ]; then
+            echo 'VAR=\"builder.sh\"' >> $GITHUB_ENV
+          else
+            echo 'VAR=${{ env.VAR }},\"builder.sh\"' >> $GITHUB_ENV
+          fi
+      - name: Build Matrix
+        id: set-matrix
+        run: |
+          echo "::set-output name=tools_matrix::[${{ env.VAR }}]"
+    outputs:
+      tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
+  
+  Builder-Scripts:
+    runs-on: ubuntu-latest
+    needs: get-artifacts
+    strategy:
+      matrix: 
+        tool: ${{ fromJson(needs.get-artifacts.outputs.tools_matrix) }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.1.0
+      - name: Generate artifacts
+        run: |
+          if [ "${{ matrix.tool }}" != "builder.sh" ]; then
+            bash unattended_installer/builder.sh --${{ matrix.tool }}
+          fi
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: artifacts-generated
+          path: |
+            unattended_installer/**tool.sh
+            unattended_installer/**install.sh
