--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -13,44 +13,12 @@ jobs:
         with:
           format: 'csv'
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: set cert
-        if: contains(steps.changed_files.outputs.all, 'cert_tool')
-        run: |
-          if [ -z "${{ env.VAR }}" ]; then
-            echo 'VAR=\"cert-tool\"' >> $GITHUB_ENV
-          else
-            echo 'VAR=${{ env.VAR }},\"cert-tool\"' >> $GITHUB_ENV
-          fi
-      - name: set password
-        if: contains(steps.changed_files.outputs.all, 'passwords_tool')
-        run: |
-          if [ -z "${{ env.VAR }}" ]; then
-            echo 'VAR=\"password-tool\"' >> $GITHUB_ENV
-          else
-            echo 'VAR=${{ env.VAR }},\"password-tool\"' >> $GITHUB_ENV
-          fi
-      - name: set install
-        if: |
-          contains(steps.changed_files.outputs.all, 'downloader') || 
-          contains(steps.changed_files.outputs.all, 'install_functions')
-        run: |
-          if [ -z "${{ env.VAR }}" ]; then
-            echo 'VAR=\"installer\"' >> $GITHUB_ENV
-          else
-            echo 'VAR=${{ env.VAR }},\"installer\"' >> $GITHUB_ENV
-          fi
-      - name: set all
-        if: contains(steps.changed_files.outputs.all, 'common_functions')
-        run: |
-          echo 'VAR=\"cert-tool\",\"password-tool\",\"installer\"' >> $GITHUB_ENV
-      - name: set builder
-        if: contains(steps.changed_files.outputs.all, 'builder.sh')
-        run: |
-          if [ -z "${{ env.VAR }}" ]; then
-            echo 'VAR=\"builder.sh\"' >> $GITHUB_ENV
-          else
-            echo 'VAR=${{ env.VAR }},\"builder.sh\"' >> $GITHUB_ENV
-          fi
+      - name: set tool
+        uses: './.github/actions/get-tools/'
+        with: 
+          tool: steps.changed_files.outputs.all
+      - name: Checkout
+        run: cat "${{ env.VAR }}"
       - name: Build Matrix
         id: set-matrix
         run: |
