--- a/.github/actions/generate-artifacts/action.yml
+++ b/.github/actions/generate-artifacts/action.yml
@@ -6,9 +6,23 @@ inputs:
 runs:
   using: "composite" 
   steps:
+    - name: Checkout
+      shell: bash
+      uses: actions/checkout@v2.1.0
     - name: Generate artifacts
       shell: bash
       run: |
         if [ "${{ artifact.tool }}" != "builder.sh" ]; then
           bash unattended_installer/builder.sh --${{ artifact.tool }}
         fi
+    - name: Checkout
+      shell: bash
+      run: ls -la unattended_installer
+    - name: Upload artifact
+      shell: bash
+      uses: actions/upload-artifact@v3
+      with:
+        name: artifacts-generated
+        path: |
+          unattended_installer/**tool.sh
+          unattended_installer/**install.sh
