--- a/.github/ workflows/pr-reviews.yml
+++ b/.github/ workflows/pr-reviews.yml
@@ -13,44 +13,10 @@ jobs:
         with:
           format: 'csv'
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: set cert
-        if: contains(steps.changed_files.outputs.all, 'cert_tool')
-        run: |
-          if [ -z "${{ env.VAR }}" ]; then
-            echo 'VAR=\"cert-tool\"' >> $GITHUB_ENV
-          else
-            echo 'VAR=${{ env.VAR }},\"cert-tool\"' >> $GITHUB_ENV
-          fi
-      - name: set password
-        if: contains(steps.changed_files.outputs.all, 'passwords_tool')
-        run: |
-          if [ -z "${{ env.VAR }}" ]; then
-            echo 'VAR=\"password-tool\"' >> $GITHUB_ENV
-          else
-            echo 'VAR=${{ env.VAR }},\"password-tool\"' >> $GITHUB_ENV
-          fi
-      - name: set install
-        if: |
-          contains(steps.changed_files.outputs.all, 'downloader') || 
-          contains(steps.changed_files.outputs.all, 'install_functions')
-        run: |
-          if [ -z "${{ env.VAR }}" ]; then
-            echo 'VAR=\"installer\"' >> $GITHUB_ENV
-          else
-            echo 'VAR=${{ env.VAR }},\"installer\"' >> $GITHUB_ENV
-          fi
-      - name: set all
-        if: contains(steps.changed_files.outputs.all, 'common_functions')
-        run: |
-          echo 'VAR=\"cert-tool\",\"password-tool\",\"installer\"' >> $GITHUB_ENV
-      - name: set builder
-        if: contains(steps.changed_files.outputs.all, 'builder.sh')
-        run: |
-          if [ -z "${{ env.VAR }}" ]; then
-            echo 'VAR=\"builder.sh\"' >> $GITHUB_ENV
-          else
-            echo 'VAR=${{ env.VAR }},\"builder.sh\"' >> $GITHUB_ENV
-          fi
+      - name: set tool
+        uses: './.github/actions/get-tools/'
+        with: 
+          tool: steps.changed_files.outputs.all
       - name: Build Matrix
         id: set-matrix
         run: |
@@ -68,10 +34,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.1.0
       - name: Generate artifacts
-        run: |
-          if [ "${{ matrix.tool }}" != "builder.sh" ]; then
-            bash unattended_installer/builder.sh --${{ matrix.tool }}
-          fi
+        uses: './.github/actions/generate-artifacts/'
+        with: 
+          artifact: "${{ matrix.tool }}"
+      - name: Checkout
+        run: ls -la unattended_installer
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
@@ -80,4 +47,23 @@ jobs:
             unattended_installer/**tool.sh
             unattended_installer/**install.sh
           
-  
+  shellcheck:
+    name: runner / shellcheck
+    runs-on: ubuntu-latest
+    needs: Builder-Scripts
+    steps:
+      - uses: actions/checkout@v1
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+      - name: actions/checkout@v1
+        run: |
+          ls -la artifacts-generated
+      - name: shellcheck
+        uses: reviewdog/action-shellcheck@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
+          path: "artifacts-generated"
+          pattern: "*.sh"
+          exclude: "artifacts-generated/*.md"
+          check_all_files_with_shebangs: "false"
