--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -46,3 +46,24 @@ jobs:
           path: |
             unattended_installer/**tool.sh
             unattended_installer/**install.sh
+            
+  shellcheck:
+    name: runner / shellcheck
+    runs-on: ubuntu-latest
+    needs: Builder-Scripts
+    steps:
+      - uses: actions/checkout@v1
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
+      - name: actions/checkout@v1
+        run: |
+          ls -la artifacts-generated
+      - name: shellcheck
+        uses: reviewdog/action-shellcheck@v1
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-review
+          path: "artifacts-generated"
+          pattern: "*.sh"
+          exclude: "artifacts-generated/*.md"
+          check_all_files_with_shebangs: "false"
