--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -64,6 +64,6 @@ jobs:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
           path: "./artifacts-generated/wazuh-certs-tool.sh"
-          pattern: "*.sh"
+          #pattern: "*.sh"
           exclude: "artifacts-generated/*.md"
           check_all_files_with_shebangs: "false"
