--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -52,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: Builder-Scripts
     steps:
-      - uses: actions/checkout@v1
+      #- uses: actions/checkout@v1
       - name: Download all artifacts
         uses: actions/download-artifact@v3
       - name: test
@@ -63,9 +63,8 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          path: |
-            "artifacts-generated"
-          #pattern: "*.sh"
+          path: "."
+          pattern: "*.sh"
           exclude: "artifacts-generated/*.md"
           check_all_files_with_shebangs: "false"
           fail_on_error: "true"
