--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -52,19 +52,22 @@ jobs:
     runs-on: ubuntu-latest
     needs: Builder-Scripts
     steps:
-      #- uses: actions/checkout@v1
+      - uses: actions/checkout@v1
       - name: Download all artifacts
         uses: actions/download-artifact@v3
       - name: test
         run: |
+          ls -ls
           ls -la artifacts-generated
       - name: shellcheck
         uses: reviewdog/action-shellcheck@v1
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          path: "."
+          path: |
+            "artifacts-generated"
+            "src"
           pattern: "*.sh"
-          exclude: "artifacts-generated/*.md"
-          check_all_files_with_shebangs: "false"
+          #exclude: "artifacts-generated/*.md"
+          #check_all_files_with_shebangs: "false"
           fail_on_error: "true"
