--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -66,9 +66,13 @@ jobs:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
           path: |
-            "artifacts_generated"
+            "/home/runner/work/wazuh-packages/wazuh-packages/artifacts_generated"
             "wpk"
           pattern: "*.sh"
           #exclude: "artifacts-generated/*.md"
           #check_all_files_with_shebangs: "false"
           fail_on_error: "true"
+      - name: test 2
+        run: |
+          pwd
+          ls -ls
