--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -66,8 +66,8 @@ jobs:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
           path: |
-            "/home/runner/work/wazuh-packages/wazuh-packages/artifacts_generated"
-            "./wpk"
+            /home/runner/work/wazuh-packages/wazuh-packages/artifacts_generated
+            ./wpk
           pattern: "*.sh"
           #exclude: "artifacts-generated/*.md"
           fail_on_error: "true"
