--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -65,7 +65,7 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          path: "/home/runner/work/wazuh-packages/wazuh-packages/artifacts_generated/."
+          path: "./artifacts_generated/"
           pattern: "*.sh"
           #exclude: "artifacts-generated/*.md"
           fail_on_error: "true"
