--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -65,11 +65,12 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          path: "artifacts_generated"
+          path: "$GITHUB_ACTION_PATH/artifacts_generated"
           pattern: "*.sh"
-          #exclude: "artifacts-generated/*.md"
+          exclude: "*.md"
           fail_on_error: "true"
-          check_all_files_with_shebangs: "true"
+      #- name: shellcheck custom
+      #  uses: './.github/actions/shellcheck/'
       - name: test 2
         run: |
           pwd
