--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -65,12 +65,12 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
-          path: $GITHUB_ACTION_PATH/artifacts_generated
+          path: artifacts_generated
           pattern: "*.sh"
           exclude: "*.md"
           fail_on_error: "true"
       - name: shellcheck custom
-        uses: './.github/actions/shellcheck/'
+        uses: './.github/actions/shellcheck'
         with:
           github_token: ${{ secrets.github_token }}
           reporter: github-pr-review
