--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -60,6 +60,7 @@ jobs:
           pwd
           ls -ls
           ls -la artifacts_generated
+          ls -la $GITHUB_ACTION_PATH
       - name: shellcheck
         uses: reviewdog/action-shellcheck@v1
         with:
