--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -57,6 +57,7 @@ jobs:
       - name: test 2
         run: |
           pwd
+          chmod 775 artifacts_generated
           ls -ls artifacts_generated
           cat ./artifacts_generated/builder.sh
       - name: test 3
