--- a/.github/actions/get-tools/action.yml
+++ b/.github/actions/get-tools/action.yml
@@ -10,6 +10,7 @@ runs:
       shell: bash
       if: contains("${{ inputs.tool }}", 'cert_tool')
       run: |
+        echo "${{ inputs.tool }}"
         if [ -z "${{ env.VAR }}" ]; then
           echo 'VAR=\"cert-tool\"' >> $GITHUB_ENV
         else
@@ -19,6 +20,7 @@ runs:
       shell: bash
       if: contains("${{ inputs.tool }}", 'passwords_tool')
       run: |
+        echo "${{ inputs.tool }}"
         if [ -z "${{ env.VAR }}" ]; then
           echo 'VAR=\"password-tool\"' >> $GITHUB_ENV
         else
@@ -30,6 +32,7 @@ runs:
         contains("${{ inputs.tool }}", 'downloader') || 
         contains("${{ inputs.tool }}", 'install_functions')
       run: |
+        echo "${{ inputs.tool }}"
         if [ -z "${{ env.VAR }}" ]; then
           echo 'VAR=\"installer\"' >> $GITHUB_ENV
         else
@@ -39,11 +42,13 @@ runs:
       shell: bash
       if: contains("${{ inputs.tool }}", 'common_functions')
       run: |
+        echo "${{ inputs.tool }}"
         echo 'VAR=\"cert-tool\",\"password-tool\",\"installer\"' >> $GITHUB_ENV
     - name: set builder
       shell: bash
       if: contains(steps.changed_files.outputs.all, 'builder.sh')
       run: |
+        echo "${{ inputs.tool }}"
         if [ -z "${{ env.VAR }}" ]; then
           echo 'VAR=\"builder.sh\"' >> $GITHUB_ENV
         else
