--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -17,7 +17,10 @@ jobs:
         with: 
           tool: steps.changed_files.outputs.all
       - name: files
-        run: echo steps.changed_files.outputs.all
+        run: |
+           for changed_file in ${{ steps.changed_files.outputs.all }}; do
+            echo "Do something with this ${changed_file}."
+          done
       - name: Build Matrix
         id: set-matrix
         run: |
