--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -16,9 +16,10 @@ jobs:
         uses: './.github/actions/get-tools/'
         with: 
           tool: steps.changed_files.outputs.all
-      - name: files
+      - name: Printing
         run: |
-          echo ${{ env.VAR }}
+          echo "All:"
+          echo "${{ steps.changed_files.outputs.all }}"
       - name: Build Matrix
         id: set-matrix
         run: |
