--- a/.github/actions/get-tools/action.yml
+++ b/.github/actions/get-tools/action.yml
@@ -44,6 +44,11 @@ runs:
       if: contains("${{ inputs.tool }}", 'common_functions')
       run: |
         echo 'VAR=\"cert-tool\",\"password-tool\",\"installer\"' >> $GITHUB_ENV
+    - name: set pepe
+      shell: bash
+      if: contains("${{ inputs.tool }}", 'pepe')
+      run: |
+        echo 'VAR=\"pepe\"' >> $GITHUB_ENV
     - name: set builder
       shell: bash
       if: contains(steps.changed_files.outputs.all, 'builder.sh')
