--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -43,7 +43,7 @@ jobs:
           path: |
             unattended_installer/**tool.sh
           
-  shellcheck:
+  Shellcheck:
     name: runner / shellcheck
     runs-on: ubuntu-latest
     needs: Builder-Scripts
@@ -51,18 +51,14 @@ jobs:
       - uses: actions/checkout@v1
       - name: Download all artifacts
         uses: actions/download-artifact@v3
-      - name: test 2
-        run: |
-          pwd
-          chmod -R 775 artifacts_generated
-          ls -ls artifacts_generated
-          cp ./unattended_installer/builder.sh artifacts_generated
-          ls -ls artifacts_generated
-      - name: test 3
-        run: |
-          pwd
-          ls -ls unattended_installer
-      - name: shellcheck
+      - name: Shellcheck for libraries of artifacts
+        uses: './.github/actions/shellcheck/'
+        with:
+          reporter: github-pr-check
+          path: "./artifacts_generated"
+          pattern: "*.sh"
+          fail_on_error: "false"
+      - name: Shellcheck for artifacts generated
         uses: './.github/actions/shellcheck/'
         with:
           reporter: github-pr-review
